actualizacion de los html y styles

--- a/Index.html
+++ b/Index.html
@@ -23,27 +23,28 @@
         <!-- Navigation bar -->
     <nav>
         <ul class="top_nav">
-            <li class="home links"><a class="active" href="#home">Home</a></li>
+            <li class="current home links"><a href="#home">Home</a></li>
             <li class="about links"><a href="#About">About Us</a></li>
-            <li class="contact links"><a href="#Contact">Contact Us</a></li>
+            <li class="contact links"><a href="./contact.html">Contact Us</a></li>
             <li class="register links"><a href="#Register">Register</a></li>
             <li class="login links"><a href="./login.html">Login</a></li>
         </ul>
-        <ul class="social">
+        <!-- <ul class="social">
             <li>Follow us </li>
             <li><a href="#IG"></a></li>
             <li><a href="#FB"></a></li>
             <li><a href="#TW"></a></li>
-        </ul>
+        </ul> -->
     </nav>
     </header>
     <main>
         <div class="descripcion">
             <h1>
-                welcome to the olympo
+                welcome to the <span class="name">olympo</span>
             </h1>
+            <hr>
             <p>
-                we have a space created for you with teams and specialized coaches to bring you a fun and 
+                we have created a space for you with teams and specialized coaches to bring you a fun and 
                 efective entertainment. Our main objective is to improve the quality of your life 
                 and your phisycal capacity to have more energy for work, to run with dogs, to play with your kids 
                 and transform you into the god you are destined to be.
@@ -69,6 +70,12 @@
         </section>
        
         <!-- Membership plans -->
+        
+        <div class="div-line">
+                <hr>
+                <span>Membership Plans</span>
+                <hr>
+        </div>
         <section class="linked-imgs">
             <div class="inline-img">
                 <img src="./Media/220px-Crossfit.png" alt="" class="pics">
