--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <title>Olympo Fitness Center</title>
 </head>
 <body>
-    <!-- ENCABEZADO -->
+    <!-- ENCABEZADO 1 -->
     <header>
         <!-- LOGO -->
         <div class="header-logo">
