animacion del banner

--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             <!-- Navigation bar -->
         <nav>
             <ul class="top_nav">
-                <li class="home links"><a href="./Index.html">Home</a></li>
+                <li class="home links"><a href="./index.html">Home</a></li>
                 <li class="about links"><a href="#About">About Us</a></li>
                 <li class=" current contact links"><a href="#Contact">Contact Us</a></li>
                 <li class="register links"><a href="#Register">Register</a></li>
