--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <!-- links de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Login</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
      <div class="bts.nav">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#"><span class="olympo">OLYMPO</span><span class="fit">Fitness center</span></a>
+            <a class="navbar-brand" href="./index.html"><span class="olympo">OLYMPO</span><span class="fit">Fitness center</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
