--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <!-- links de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Contact</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <div class="bts.nav">
                 <nav class="navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><span class="olympo">OLYMPO</span><span class="fit">Fitness center</span></a>
+                    <a class="navbar-brand" href="./index.html"><span class="olympo">OLYMPO</span><span class="fit">Fitness center</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -42,12 +42,7 @@
                     </div>
                 </nav>
             </div>
-            <!-- <ul class="social">
-                <li>Follow us </li>
-                <li><a href="#IG"></a></li>
-                <li><a href="#FB"></a></li>
-                <li><a href="#TW"></a></li>
-            </ul> -->
+            
         </nav>
     </header>
     <main>
