--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-end fs-4" id="navbarNav">
-                        <ul class="navbar-nav">
+                        <ul class="navbar-nav nav-mob">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                         </li>
