--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <title>Olympo Fitness Center</title>
 </head>
 <body>
+    <header>
         <!-- Bootstrap Navigation bar -->
         <div class="bts-nav">
             <nav class="navbar navbar-expand-lg navbar-light">
@@ -25,7 +26,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end font-nav fs-4" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav nav-mob">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
@@ -40,6 +41,29 @@
                 </div>
             </nav>
         </div>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="5000">
+                <img src="./Media/carrusel1.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="5000">
+                <img src="./Media/carrusel3.jpg" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-bs-interval="5000">
+                <img src="./Media/carrusel2.jpg" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+    </header>    
     <main>
         <div class="descripcion">
             <h1>
