eliminado viejo carrusel

--- a/index.html
+++ b/index.html
@@ -69,33 +69,10 @@
             <h1>
                 welcome to the <span class="name">olympo</span>
             </h1>
-            <hr>
             <!-- Brief description about the project -->
             <p>
-                we have created a space for you with teams and specialized coaches to bring you a fun and 
-                efective entertainment. Our main objective is to improve the quality of your life 
-                and your phisycal capacity to have more energy for work, to run with dogs, to play with your kids 
-                and transform you into the god you are destined to be.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci quidem dignissimos corrupti aliquam architecto veniam corporis. Ea adipisci a ipsa ex quisquam sequi fugit quibusdam, quasi consequuntur magni iusto eaque quae laboriosam dignissimos quis excepturi enim rerum in nobis doloribus distinctio iure voluptates. Deserunt ducimus eveniet recusandae aliquam optio rerum obcaecati, inventore quae vel accusamus iusto eos, id, suscipit ea! Aspernatur atque aperiam id quos asperiores excepturi, cumque ipsa voluptas a unde, nihil laboriosam repellat accusamus distinctio iusto quisquam vel quis. Non pariatur aliquam quos aliquid voluptates illum harum odio doloremque! Illum officiis sit quis itaque autem praesentium quod qui.
             </p>
-        </div>
-        <!-- Carrusel de fotos con desplazamiento -->
-        <div class="container">
-            <section class="carrusel">
-                <div class="Slideshow-container">
-                    <img src="./Media/training-load-960x540.jpg" alt="crossfit" class="gym">
-                    <img src="./Media/rise-gym-wework046-hdr-edit-full-res-copy-1549045104.jpg" alt="gym" class="slide">
-                
-                <!-- Next and previous buttons -->
-                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-                </div>
-                <!-- The dots/circles -->
-                <div class="dots_circles" style="text-align: center;">
-                    <span class="dot active" onclick="currentSlide(1)"></span>
-                    <span class="dot" onclick="currentSlide(2)"></span>
-                    <span class="dot" onclick="currentSlide(3)"></span>             
-                </div>
-            </section>
         </div>
         <!-- Membership plans -->
         <section class="container-fluid mt-5 mb-5 mbr-plans">
