--- a/index.html
+++ b/index.html
@@ -66,17 +66,19 @@
     </header>    
     <main>
         <div class="descripcion">
-            <h1>
-                welcome to the <span class="name">olympo</span>
-            </h1>
-            <!-- Brief description about the project -->
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci quidem dignissimos corrupti aliquam architecto veniam corporis. Ea adipisci a ipsa ex quisquam sequi fugit quibusdam, quasi consequuntur magni iusto eaque quae laboriosam dignissimos quis excepturi enim rerum in nobis doloribus distinctio iure voluptates. Deserunt ducimus eveniet recusandae aliquam optio rerum obcaecati, inventore quae vel accusamus iusto eos, id, suscipit ea! Aspernatur atque aperiam id quos asperiores excepturi, cumque ipsa voluptas a unde, nihil laboriosam repellat accusamus distinctio iusto quisquam vel quis. Non pariatur aliquam quos aliquid voluptates illum harum odio doloremque! Illum officiis sit quis itaque autem praesentium quod qui.
-            </p>
+            <div class="descripcion-ani">
+                <h1>
+                    <span class="name">olympo</span> "where gods are born"
+                </h1>
+                <!-- Brief description about the project -->
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum excepturi adipisci voluptate soluta porro molestiae minima blanditiis! Fugiat, repellendus a?
+                </p>
+            </div>
         </div>
         <!-- Membership plans -->
         <section class="container-fluid mt-5 mb-5 mbr-plans">
-            <h1 class="text-center h2 mt-5">Membership plans</h1>
+            <h1 class="text-center mb-5"><span class="name">Membership</span> plans</h1>
             <div class="row justify-content-around">
                 <div class="card col-sm-12 col-lg-4" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-zeus.png" class="card-img-top" alt="...">
@@ -108,22 +110,51 @@
         <!-- <aside>
 
         </aside> -->
-        <!-- Cuadros de Imagenes con Resumen-->
-        <section>
-            <div class="crew_pic">
-                <img src="" alt="">
-                <div class="crew_text">
-                    
+        <!-- Frequently asked questions-->
+        <section class="container-fluid">
+            <div class="row">
+                <h1 class="text-center col-12 mb-3">Frequently asked <span class="name">Question?</span></h1>
+                <!-- ACCORDION -->
+                <div class="accordion col-12" id="accordionExample">
+                    <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Accordion Item #1
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                    </div>
+                    <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Accordion Item #2
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                    </div>
+                    <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Accordion Item #3
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                    </div>
+                    </div>
                 </div>
-            </div>
-            <div class="pet_pic">
-                <img src="" alt="">
-                <div class="pet_text"> </div>
-            </div>
-        </section>
-        <!-- Map location-->
-        <section>
-
+                </div>
+            </div>  
         </section>
     </main>
     <!-- Bootstrap Footer with bts grids -->
