--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- links de Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <!-- Animaciones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Olympo Fitness Center</title>
@@ -80,7 +82,7 @@
         <section class="container-fluid mt-5 mb-5 mbr-plans">
             <h1 class="text-center mb-5"><span class="name">Membership</span> plans</h1>
             <div class="row justify-content-around">
-                <div class="card col-sm-12 col-lg-4" style="width: 18rem;">
+                <div class="card col-sm-12 col-lg-4 animate__animated animate__fadeInUp" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-zeus.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Zeus suscription</h5>
@@ -88,7 +90,7 @@
                     <a href="#" class="btn btn-primary btn-plans">Learn more</a>
                     </div>
                 </div>
-                <div class="card col-sm-12 col-lg-4" style="width: 18rem;">
+                <div class="card col-sm-12 col-lg-4 animate__animated animate__fadeInUp" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-poseidon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Poseidon suscription</h5>
@@ -96,7 +98,7 @@
                     <a href="#" class="btn btn-primary btn-plans">Learn more</a>
                     </div>
                 </div>
-                <div class="card col-sm-12 col-lg-4" style="width: 18rem;">
+                <div class="card col-sm-12 col-lg-4 animate__animated animate__fadeInUp" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-hades.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Hades suscription</h5>
@@ -111,8 +113,8 @@
 
         </aside> -->
         <!-- Frequently asked questions-->
-        <section class="container-fluid">
-            <div class="row">
+        <section class="container-fluid faq">
+            <div class="row mb-5">
                 <h1 class="text-center col-12 mb-3">Frequently asked <span class="name">Question?</span></h1>
                 <!-- ACCORDION -->
                 <div class="accordion col-12" id="accordionExample">
