limpiando SCSS y SEO

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olympo, named after the home of the Greek gods, is where you will find personal training, coaching, crossfit classes, cardio training and strength equipment, all in one place. Our goal is to get you shreded like a god from the Olympus to represent the GODS in the Elysium and compete for glory">
+    <meta name="keywords" content="GYM, CROSSFIT, CARDIO, TRAINING, GYM, COACH, STRENGTH, FITNESS">
     <link rel="shortcut icon" href="./Media/favicon-32x32.png">
     <!-- link de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Contact</title>
+    <title>Contact - Olympo FC</title>
 </head>
 <body>
     <header>
@@ -49,7 +51,7 @@
             <div class="container ctc">
                 <div class="row">
                     <div class="col-sm-12 col-lg-4">
-                        <h1>Follow us</h1>
+                        <h2>Follow us</h2>
                         <ul>
                             <li><a href="#FB">Facebook</a></li>
                             <li><a href="IG">Instagram</a></li>
@@ -57,7 +59,7 @@
                         </ul>
                     </div>
                     <div class="col-sm-12 col-lg-4">
-                        <h1>gym hours</h1>
+                        <h2>gym hours</h2>
                         <ul>
                             <li>mon-thu</li>
                             <li>fri</li>
@@ -65,7 +67,7 @@
                         </ul>
                     </div>
                     <div class="col-sm-12 col-lg-4">
-                        <h1>Contact info</h1>
+                        <h2>Contact info</h2>
                         <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique possimus unde perferendis ad, in illum, repellendus natus voluptatibus quisquam earum deserunt. Tempore, assumenda totam. Recusandae dignissimos quam provident ipsam.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel sequi repudiandae hic cumque quasi ipsa, cupiditate ducimus necessitatibus natus provident cum nesciunt est autem eum dolores mollitia nostrum unde.
