--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olympo is a place where you will find personal coaching, crossfit classes, cardio training and strength equipment, all in one place. Our goal is to get you shreded like a god from the Olympus">
+    <meta name="keywords" content="GYM, CROSSFIT, CARDIO, TRAINING, GYM, COACH, STRENGTH, FITNESS">
     <link rel="shortcut icon" href="./Media/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- link de Bootstrap -->
@@ -80,7 +82,7 @@
         </div>
         <!-- Membership plans -->
         <section class="container-fluid mt-5 mb-5 mbr-plans">
-            <h1 class="text-center mb-5"><span class="name">Membership</span> plans</h1>
+            <h2 class="text-center mb-5"><span class="name">Membership</span> plans</h2>
             <div class="row justify-content-around">
                 <div class="card col-sm-12 col-lg-4 animate__animated animate__fadeInUp" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-zeus.png" class="card-img-top" alt="...">
@@ -108,14 +110,10 @@
                 </div>
             </div>
         </section>
-        <!--Contact us menu scrolleable-->
-        <!-- <aside>
-
-        </aside> -->
         <!-- Frequently asked questions-->
         <section class="container-fluid faq">
             <div class="row mb-5">
-                <h1 class="text-center col-12 mb-3">Frequently asked <span class="name">Question?</span></h1>
+                <h2 class="text-center col-12 mb-3">Frequently asked <span class="name">Question?</span></h2>
                 <!-- ACCORDION -->
                 <div class="accordion col-12" id="accordionExample">
                     <div class="accordion-item">
