--- a/login.html
+++ b/login.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Olympo is a place where you will find personal coaching, crossfit classes, cardio training and strength equipment, all in one place. Our goal is to get you shreded like a god from the Olympus">
+    <meta name="keywords" content="GYM, CROSSFIT, CARDIO, TRAINING, GYM, COACH, STRENGTH, FITNESS">
     <link rel="shortcut icon" href="./Media/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- link de Bootstrap -->
@@ -13,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./css/style.css">
-    <title>Login</title>
+    <title>Login - Olympo FC</title>
 </head>
 <body>
     <!-- ENCABEZADO -->
