--- a/contact.html
+++ b/contact.html
@@ -51,19 +51,23 @@
             <div class="container ctc">
                 <div class="row">
                     <div class="col-sm-12 col-lg-4">
-                        <h2>Follow us</h2>
-                        <ul>
-                            <li><a href="#FB">Facebook</a></li>
-                            <li><a href="IG">Instagram</a></li>
-                            <li><a href="YT">Youtube</a></li>
+                        <h2>Social Media</h2>
+                        <p>Keep track of our latest promos and activities following us on our social media and never miss anything</p>
+                        <ul class="scl">
+                            <li><a href="https://www.facebook.com/" target="_blank"><i class="bi bi-facebook fs-2"></i></a></li>
+                            <li><a href="https://www.instagram.com/" target="_blank"><i class="bi bi-instagram fs-2"></i></a></li>
+                            <li><a href="https://www.youtube.com/" target="_blank"><i class="bi bi-youtube fs-2"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-sm-12 col-lg-4">
-                        <h2>gym hours</h2>
+                        <h2>GYM HOURS</h2>
                         <ul>
-                            <li>mon-thu</li>
-                            <li>fri</li>
-                            <li>sat - sun</li>
+                            <li>Mon 6:00 am - 9:00 pm</li>
+                            <li>Tue 6:00 am - 9:00 pm</li>
+                            <li>Wed 6:00 am - 9:00 pm</li>
+                            <li>Thu 6:00 am - 9:00 pm</li>
+                            <li>Fri 6:00 am - 9:00 pm</li>
+                            <li>Sat 8:00 am - 12:00 pm</li>
                         </ul>
                     </div>
                     <div class="col-sm-12 col-lg-4">
@@ -111,7 +115,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-4 d-flex justify-content-center">
                     <div class="office_hours">
-                        Office hours:
+                        <h4>Office hours:</h4>
                         <ul>
                             <li>Mon 6:00 am - 9:00 pm</li>
                             <li>Tue 6:00 am - 9:00 pm</li>
