--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-lg-4 d-flex justify-content-center">
                         <div class="office_hours">
-                            Office hours:
+                            <h4>Office hours:</h4>
                             <ul>
                                 <li>Mon 6:00 am - 9:00 pm</li>
                                 <li>Tue 6:00 am - 9:00 pm</li>
