actualizacion del index

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!-- link de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- links de Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Animaciones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -72,23 +74,77 @@
         <div class="descripcion">
             <div class="descripcion-ani">
                 <h1>
-                    <span class="name">olympo</span> "where gods are born"
+                    <span class="name">olympo</span> where gods are born
                 </h1>
                 <!-- Brief description about the project -->
                 <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum excepturi adipisci voluptate soluta porro molestiae minima blanditiis! Fugiat, repellendus a?
+                    "COMFORT ZONE ENDS HERE"
                 </p>
             </div>
         </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6 fitgrp">
+                    <h2 class="fitgrp_100">fitness in 100 words</h2>
+                    <p><span class="name">Eat meat and vegetables,</span>nuts and seeds, some fruit, little starch and <span class="name">no sugar.</span>  Keep intake to levels that will support exercise but not body fat.
+
+                        <span class="name">Practice</span> and <span class="name">train</span> major lifts: <span>Deadlift, clean, squat,</span> presses, C&J, and snatch. Similarly, <span>master the <span class="name">basics</span> of gymnastics:</span> pull-ups, dips, rope climb, push-ups, sit-ups, presses to handstand, pirouettes, flips, splits, and holds. <span>Bike, run, swim, row, etc, <span class="name">hard</span> and <span class="name">fast.</span></span>
+                        
+                        <span>Five or six days per week</span> mix these elements in as many combinations and patterns as <span>creativity</span> will allow. <span class="name">Routine is the enemy</span>.<span>Keep workouts short and intense.</span> 
+                        
+                        <span class="name">Regularly learn and play new sports.</span></p>
+                </div>
+                <div class="col-sm-12 col-lg-6">
+                    <div>
+                        <img src="./Media/pngegg.png" alt="rope" name="ropeclimb" class="rope">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- DISCOVER OLYMPO -->
+        <section class="grd">
+            <h2>discover <span class="name">olympo</span></h2>
+            <div class="row row-cols-1 row-cols-md-3 g-3">
+                <div class="col">
+                <div class="card">
+                    <img src="./Media/pngegg (3).png" class="card-img-top" alt="functional">
+                    <div class="card-body">
+                    <h5 class="card-title">FUNCTIONAL TRAINING</h5>
+                    <p class="card-text">Functional fitness training is a type of strength training that readies your body for daily activities. These exercises equip you for the most important type of physical fitness, the kind that preps you for real-life, daily living stuff like bending, twisting, lifting, loading, pushing, pulling, squatting and hauling. Most functional fitness contains multi-joint movement patterns that involve your knees, hips, spine, elbows, wrists, and shoulders, which all build strength and improve your range of motion. It all comes down to being practical, but don't mistake that for boring.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                <div class="card">
+                    <img src="./Media/pngegg (1).png" class="card-img-top" alt="crossfit">
+                    <div class="card-body">
+                    <h5 class="card-title">CROSSFIT TRAINING</h5>
+                    <p class="card-text">CrossFit is a lifestyle characterized by safe, effective exercise and sound nutrition. CrossFit can be used to accomplish any goal, from improved health to weight loss to better performance. The program works for everyone — people who are just starting out and people who have trained for years.</p>
+                    <p>The magic is in the movement. CrossFit workouts are different every day and can be modified to help each athlete achieve their goals. The workouts may be adapted for people at any age and level of fitness.</p>
+                    </div>
+                </div>
+                </div>
+                <div class="col">
+                <div class="card">
+                    <img src="./Media/pngegg (2).png" class="card-img-top" alt="weightlifting">
+                    <div class="card-body">
+                    <h5 class="card-title">WEIGHT TRAINING</h5>
+                    <p class="card-text">Your friends enjoy using the weight machines and free weights at the fitness center. And you see the results of their hard work — toned muscles and an overall improved physique. You'd like to start a weight training program, but you're not sure you have the time. Think again.</p>
+                    <p>Weight training is a type of strength training that uses weights for resistance. Weight training provides a stress to the muscles that causes them to adapt and get stronger, similar to the way aerobic conditioning strengthens your heart.</p>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
         <!-- Membership plans -->
-        <section class="container-fluid mt-5 mb-5 mbr-plans">
+        <section class="container-fluid mbr-plans">
             <h2 class="text-center mb-5"><span class="name">Membership</span> plans</h2>
             <div class="row justify-content-around">
                 <div class="card col-sm-12 col-lg-4 animate__animated animate__fadeInUp" style="width: 18rem;">
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-zeus.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Zeus suscription</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Get lean, get tonified, get big with this plan which include personal training, nutrition coach and personal routines</p>
                     <a href="#" class="btn btn-primary btn-plans">Learn more</a>
                     </div>
                 </div>
@@ -96,7 +152,7 @@
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-poseidon.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Poseidon suscription</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Be brave enough to train with the best to be the best of all, improve your skill and techniques.</p>
                     <a href="#" class="btn btn-primary btn-plans">Learn more</a>
                     </div>
                 </div>
@@ -104,7 +160,7 @@
                     <img src="./Media/caras-olimpoMesa-de-trabajo-7-hades.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">Hades suscription</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">Adventure into the unknown, be prepared to get your best version, start traning your mind and your body</p>
                     <a href="#" class="btn btn-primary btn-plans">Learn more</a>
                     </div>
                 </div>
