entrega del proyecto

--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <!-- links de Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./css/style.css">
@@ -72,15 +73,33 @@
                     </div>
                     <div class="col-sm-12 col-lg-4">
                         <h2>Contact info</h2>
-                        <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni similique possimus unde perferendis ad, in illum, repellendus natus voluptatibus quisquam earum deserunt. Tempore, assumenda totam. Recusandae dignissimos quam provident ipsam.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam vel sequi repudiandae hic cumque quasi ipsa, cupiditate ducimus necessitatibus natus provident cum nesciunt est autem eum dolores mollitia nostrum unde.
-                        </p>
+                        <ul class="ctcinfo">
+                            <li><i class="bi bi-telephone-fill"></i> (786) 620-8845</li>
+                            <li><i class="bi bi-envelope-fill"></i> olympofc@gmail.com</li>
+                            <li>
+                                <i class="bi bi-geo-alt-fill"></i> 1915 NW 79th Ave, Doral, FL 33122
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d755.2014077577296!2d-80.32305065479653!3d25.791577668546516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b9750b011443%3A0x139d0eb0e4e31cb5!2s1915%20NW%2079th%20Ave%2C%20Doral%2C%20FL%2033122!5e0!3m2!1sen!2sus!4v1647833265270!5m2!1sen!2sus" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                            </li>
+                        </ul>
                     </div>
-                    <div class="col-sm-12 col-lg-8 msg mb-5">
-                        <h1>Question? Send us a message</h1>
-                        <form class="frm">
+                    <!-- Frequently asked questions-->
+                    <div class="col-sm-12 col-lg-4 faq">
+                        <h2><span>F.A.Q</span></h2>
+                    </div>
+                    <div class="col-sm-12 col-lg-8 questions">
+                        <ul>
+                            <li>Muscle weighs more than fat. True or False?</li>
+                            <p>False. A pound is a pound regardless of whether the pound is fat or muscle. The truth about muscle is that it's denser than fat and takes up a smaller amount of space in the body. In fact, scientists estimate that 1 pound of muscle occupies about 22% less space than 1 pound of fat!</p>
+                            <li>Does muscle burn calories even when the body is at rest?</li>
+                            <p>Yes. When you exercise, you use muscle. This helps build muscle mass, and muscle tissue burns more calories than body fat, even when the body at rest. According to Christopher Wharton, PhD, a certified personal trainer and researcher with the Rudd Center for Food Policy and Obesity at Yale University, 10 pounds of muscle would burn 50 calories in a day spent at rest, while 10 pounds of fat would burn 20 calories.</p>
+                            <li>Strength training, such as lifting weights, will result in a bulky appearance. True or False?</li>
+                            <p>False. It is not true that lifting weights will result in a bulky appearance. According to Cedric Bryant, chief exercise physiologist for the American Council on Exercise, "This is a myth that deters a lot of women from strength training, when in fact, what determines the amount of muscle bulk a person has is largely dependent on genetic factors."</p>
+                        </ul>
 
+                    </div>
+                    <div class="col-12 qfrm">
+                        <h2>Question? Send us a message</h2>
+                        <form>
                             <label for="fname">First Name</label>
                             <input type="text" id="fname" name="firstname" placeholder="Your name..">
                         
@@ -103,9 +122,6 @@
                             <input type="submit" value="Submit">
                         
                         </form>
-                    </div>
-                    <div class="col-sm-12 col-lg-4 frm-map mt-5">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d755.2014077577296!2d-80.32305065479653!3d25.791577668546516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88d9b9750b011443%3A0x139d0eb0e4e31cb5!2s1915%20NW%2079th%20Ave%2C%20Doral%2C%20FL%2033122!5e0!3m2!1sen!2sus!4v1647833265270!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                     </div>
                 </div>
     </main>
