--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
     <main>
         <!-- Login form -->
         <div class="lgf">
-            <form action="" method="post">
+            <form action="" method="post" class="lgn">
             <div class="loginform">
                     <label for="uname" class="info">Email or Username</label>
                     <input class="uname" id="uname" type="text" placeholder="Enter Email or Username" name="uname" required>
